# pandera-alchemy

./: .gitignore  README.md  demo.ipynb  pyproject.toml
schema_validator/: __init__.py  exceptions.py  logger.py  table.py
scripts/: example.py
tests/: test_table.py  test_unified_types.py
