[tool.poetry]
name = "schema-validator"
version = "1.145.0"
description = "A package that allows us to use Pandera DataFrame Models to validate table schemas"
authors = ["Thomas Richards <thomas.richards@powin.com>"]
readme = "README.md"
packages = [{ include = "schema_validator" }]

[tool.poetry.dependencies]
python = "^3.9"
pandera = "^0.20.3"
sqlalchemy = "~1.4"
pandas = "^1.5"
numpy = ">=1.23,<1.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
testcontainers-postgres = "^0.0.1rc1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
